# ChangeLog for dev-util/f90cache
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*f90cache-0.95 (19 May 2015)

  19 May 2015; Marius Brehler <marbre@linux.sungazer.de> +f90cache-0.95.ebuild:
  Version bump

*f90cache-0.94 (24 Dec 2012)

  24 Dec 2012; Christoph Junghans <ottxor@gentoo.org> +f90cache-0.94.ebuild,
  -f90cache-0.93.7.ebuild:
  version bump

  25 Oct 2012; Justin Lecher <jlec@gentoo.org> f90cache-0.93.7.ebuild:
  Use fortran-2.eclass

*f90cache-0.93.7 (14 Jul 2012)

  14 Jul 2012; Christoph Junghans <ottxor@gentoo.org> +f90cache-0.93.7.ebuild,
  +metadata.xml:
  initial commit