@@ -1,2 +1,3 @@
 DIST f90cache-0.94.tar.bz2 64670 SHA256 0ddc06ad98dcfb2b4b2a45561eabdd9c31e872eaef83d0719d5546e5a1dd775b SHA512 bd36a20614e82a8728fbb5ba7897c13d6e59243a4fbb8878cfb8019ca4ee976280cfe8ba5a00c19b620756910f257cd7fe72de6bdfc06f4ee2f7f17c5f9b892d WHIRLPOOL c2509d420228eb839dc1a4e92c2de27a45a74ff45c660e3379f2b3ad8f12ffd9be5e13331cf898e66be9dd72833856aa2de46129c80b410b9e10dc168f7409d1
 DIST f90cache-0.95.tar.bz2 74843 SHA256 3976a15d99442f96d8a4d5f1d468339167a1e7538079b647f6ed2ef9e970a5b8 SHA512 21b19a1bc3b5b329eab3669cf5396085a454b6745d7c6f02ad73472be59346388953e62daaccd414df5b183eef580b6f5673ba16a012942bef160e1d6848f331 WHIRLPOOL 2cb69ff47125edf1d77049a3b466aba484ed2a9f0ad4c32a8b68596d93b7c62b70f77a142431c9a97066b5f7397b3432f8851edd45814bd9b00c447f79116bfe
+DIST f90cache-0.96.tar.bz2 60465 SHA256 b3cbf70ae0e9b11f632454b223243c0e0d32c29a22b002e20c3b42f4160e5f25 SHA512 b569c6e853ffc237e9a3d34e5fd14224d99483c2b96a27377350c5a02f922e37e1a8ffa46f93cb587e41d82e479d325c6d88e98de2c950e177780ce64a6f5470 WHIRLPOOL 618aaf8c465daddf3f1c6a7b72917042b785b2689b7cfb7dfb52f9c6b717b1cf5c4b613e43d36e47067f801e70360455b5439e68dfb63a3530f86e9e605121e6
